[package]
name = "tweaker"
version = "0.1.3"
edition = "2024"

[dependencies]
cmdparse = { path = "./deps/cmdparse" }
tweakov = { path = "./deps/tweakov" }
chrono = "~0.4"
matrix-sdk = {version = "~0.16", default-features = false, features = ["native-tls"]}
serde = { version = "~1.0", features = ["derive"] }
tokio = { version = "~1.52", features = ["rt-multi-thread"] }
toml = "~1.1"
tracing = "~0.1"
tracing-subscriber = {version = "~0.3", features = ["env-filter", "local-time"]}
rand = "~0.10"
async-trait = "~0.1"
ctrlc = "~3.5"
regex = "~1.12"
strum = { version = "~0.27", features = ["derive"] }
